corrects multiple membership nav dropdown alignment

--- a/curiositymachine/sass/pages/_educator.scss
+++ b/curiositymachine/sass/pages/_educator.scss
@@ -56,6 +56,10 @@
         }
       }
     }
+
+    .dropdown a {
+      margin: 0px;
+    }
   }
 
   @include media-breakpoint-down(md) {
